--- a/pom.xml
+++ b/pom.xml
@@ -68,9 +68,15 @@ limitations under the License.
     </dependency>
 
     <dependency>
-        <groupId>com.atlassian.commonmark</groupId>
-        <artifactId>commonmark</artifactId>
-        <version>0.12.1</version>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-translate</artifactId>
+      <version>1.55.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.atlassian.commonmark</groupId>
+      <artifactId>commonmark</artifactId>
+      <version>0.12.1</version>
     </dependency>
 
   </dependencies>
